[package]
name = "pezkuwi-omni-node"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
build = "build.rs"
description = "Generic binary that can run a teyrchain node with u32 block number and Aura consensus"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre = { workspace = true }

# Local
pezkuwi-omni-node-lib = { workspace = true, features = [
	"pezkuwichain-native",
	"zagros-native",
] }

[dev-dependencies]
assert_cmd = { workspace = true }

[build-dependencies]
bizinikiwi-build-script-utils = { workspace = true, default-features = true }

[features]
default = []
runtime-benchmarks = ["pezkuwi-omni-node-lib/runtime-benchmarks"]
try-runtime = ["pezkuwi-omni-node-lib/try-runtime"]
std = ["pezkuwi-omni-node-lib/std"]
