[package]
name = "teyrchain-template"
description = "A teyrchain-template helper crate to keep documentation in sync with the template's components."
version = "0.0.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
documentation.workspace = true

[dependencies]
docify = { workspace = true }

[features]
generate-readme = []
