[package]
name = "pez-template-zombienet-tests"
description = "Zombienet test for templates."
version = "0.0.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
pezkuwi-zombienet-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
zombienet = []
std = ["anyhow/std", "pezkuwi-zombienet-sdk/std"]
runtime-benchmarks = ["pezkuwi-zombienet-sdk/runtime-benchmarks"]
