[package]
name = "chain-spec-tool"
version = "0.1.0"
edition = "2021"
description = "CLI tool for adding teyrchains to relay chain spec"
license = "GPL-3.0-only"

[workspace]

[[bin]]
name = "chain-spec-tool"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
