[package]
name = "pezsc-allocator"
version = "23.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Collection of allocator implementations."
documentation.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true, default-features = true }
pezsp-core = { workspace = true, default-features = true }
pezsp-wasm-interface = { workspace = true, default-features = true }
thiserror = { workspace = true }

[features]
std = ["log/std"]
serde = []
