[package]
name = "pezsc-client-api"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "Bizinikiwi client interfaces."
documentation.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
pezsc-executor = { workspace = true, default-features = true }
pezsc-transaction-pool-api = { workspace = true, default-features = true }
pezsc-utils = { workspace = true, default-features = true }
pezsp-api = { workspace = true, default-features = true }
pezsp-blockchain = { workspace = true, default-features = true }
pezsp-consensus = { workspace = true, default-features = true }
pezsp-core = { workspace = true }
pezsp-database = { workspace = true, default-features = true }
pezsp-externalities = { workspace = true, default-features = true }
pezsp-runtime = { workspace = true }
pezsp-state-machine = { workspace = true, default-features = true }
pezsp-storage = { workspace = true, default-features = true }
pezsp-trie = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }

[dev-dependencies]
bizinikiwi-test-runtime = { workspace = true }

[features]
runtime-benchmarks = [
	"bizinikiwi-test-runtime/runtime-benchmarks",
	"pezsc-executor/runtime-benchmarks",
	"pezsc-transaction-pool-api/runtime-benchmarks",
	"pezsp-api/runtime-benchmarks",
	"pezsp-blockchain/runtime-benchmarks",
	"pezsp-consensus/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
	"pezsp-state-machine/runtime-benchmarks",
	"pezsp-trie/runtime-benchmarks",
]
std = [
	"codec/std",
	"log/std",
	"pezsc-transaction-pool-api/std",
	"pezsc-utils/std",
	"pezsp-blockchain/std",
	"pezsp-consensus/std",
	"pezsp-core/std",
	"pezsp-runtime/std",
	"prometheus-endpoint/std",
]
try-runtime = [
	"bizinikiwi-test-runtime/try-runtime",
	"pezsc-executor/try-runtime",
	"pezsc-transaction-pool-api/try-runtime",
	"pezsp-api/try-runtime",
	"pezsp-blockchain/try-runtime",
	"pezsp-consensus/try-runtime",
	"pezsp-runtime/try-runtime",
]
serde = []
