[package]
name = "pezsc-authority-discovery"
version = "0.34.0"
authors.workspace = true
edition.workspace = true
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "Bizinikiwi authority discovery."
readme = "README.md"
documentation.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
codec = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
ip_network = { workspace = true }
linked_hash_set = { workspace = true }
log = { workspace = true, default-features = true }
pezsc-client-api = { workspace = true, default-features = true }
pezsc-network = { workspace = true, default-features = true }
pezsc-network-types = { workspace = true, default-features = true }
pezsc-service.workspace = true
pezsp-api = { workspace = true, default-features = true }
pezsp-authority-discovery = { workspace = true, default-features = true }
pezsp-blockchain = { workspace = true, default-features = true }
pezsp-core = { workspace = true, default-features = true }
pezsp-keystore = { workspace = true, default-features = true }
pezsp-runtime = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }
prost = { workspace = true }
rand = { workspace = true, default-features = true }
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true }
tokio.workspace = true

[dev-dependencies]
bizinikiwi-test-runtime-client = { workspace = true }
hex.workspace = true
pezsp-tracing = { workspace = true, default-features = true }
quickcheck = { workspace = true }
tempfile.workspace = true

[build-dependencies]
prost-build = { workspace = true }

[features]
runtime-benchmarks = [
	"bizinikiwi-test-runtime-client/runtime-benchmarks",
	"pezsc-client-api/runtime-benchmarks",
	"pezsc-network/runtime-benchmarks",
	"pezsc-service/runtime-benchmarks",
	"pezsp-api/runtime-benchmarks",
	"pezsp-authority-discovery/runtime-benchmarks",
	"pezsp-blockchain/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
]
std = [
	"bizinikiwi-test-runtime-client/std",
	"codec/std",
	"hex/std",
	"log/std",
	"pezsc-client-api/std",
	"pezsc-network-types/std",
	"pezsc-network/std",
	"pezsc-service/std",
	"pezsp-blockchain/std",
	"prometheus-endpoint/std",
	"serde/std",
	"serde_json/std",
]
try-runtime = [
	"bizinikiwi-test-runtime-client/try-runtime",
	"pezsc-client-api/try-runtime",
	"pezsc-network/try-runtime",
	"pezsc-service/try-runtime",
	"pezsp-api/try-runtime",
	"pezsp-authority-discovery/try-runtime",
	"pezsp-blockchain/try-runtime",
	"pezsp-runtime/try-runtime",
]
serde = []
with-tracing = []
