[package]
name = "pezsc-basic-authorship"
version = "0.34.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "Basic implementation of block-authoring logic."
readme = "README.md"
documentation.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
pezsc-block-builder = { workspace = true, default-features = true }
pezsc-proposer-metrics = { workspace = true, default-features = true }
pezsc-telemetry = { workspace = true, default-features = true }
pezsc-transaction-pool-api = { workspace = true, default-features = true }
pezsp-api = { workspace = true, default-features = true }
pezsp-blockchain = { workspace = true, default-features = true }
pezsp-consensus = { workspace = true, default-features = true }
pezsp-core = { workspace = true, default-features = true }
pezsp-inherents = { workspace = true, default-features = true }
pezsp-runtime = { workspace = true, default-features = true }
pezsp-trie = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }

[dev-dependencies]
bizinikiwi-test-runtime-client = { workspace = true }
parking_lot = { workspace = true, default-features = true }
pezsc-client-api = { workspace = true, default-features = true }
pezsc-transaction-pool = { workspace = true, default-features = true }

[features]
runtime-benchmarks = [
	"bizinikiwi-test-runtime-client/runtime-benchmarks",
	"pezsc-block-builder/runtime-benchmarks",
	"pezsc-client-api/runtime-benchmarks",
	"pezsc-transaction-pool-api/runtime-benchmarks",
	"pezsc-transaction-pool/runtime-benchmarks",
	"pezsp-api/runtime-benchmarks",
	"pezsp-blockchain/runtime-benchmarks",
	"pezsp-consensus/runtime-benchmarks",
	"pezsp-inherents/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
	"pezsp-trie/runtime-benchmarks",
]
std = [
	"bizinikiwi-test-runtime-client/std",
	"log/std",
	"pezsc-block-builder/std",
	"pezsc-client-api/std",
	"pezsc-proposer-metrics/std",
	"pezsc-telemetry/std",
	"pezsc-transaction-pool-api/std",
	"pezsc-transaction-pool/std",
	"pezsp-blockchain/std",
	"pezsp-consensus/std",
	"prometheus-endpoint/std",
]
try-runtime = [
	"bizinikiwi-test-runtime-client/try-runtime",
	"pezsc-block-builder/try-runtime",
	"pezsc-client-api/try-runtime",
	"pezsc-transaction-pool-api/try-runtime",
	"pezsc-transaction-pool/try-runtime",
	"pezsp-api/try-runtime",
	"pezsp-blockchain/try-runtime",
	"pezsp-consensus/try-runtime",
	"pezsp-inherents/try-runtime",
	"pezsp-runtime/try-runtime",
]
serde = []
