[package]
name = "pezsc-block-builder"
version = "0.33.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "Bizinikiwi block builder"
readme = "README.md"
documentation.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = true }
pezsp-api = { workspace = true, default-features = true }
pezsp-block-builder = { workspace = true, default-features = true }
pezsp-blockchain = { workspace = true, default-features = true }
pezsp-core = { workspace = true, default-features = true }
pezsp-inherents = { workspace = true, default-features = true }
pezsp-runtime = { workspace = true, default-features = true }
pezsp-trie = { workspace = true, default-features = true }

[dev-dependencies]
bizinikiwi-test-runtime-client = { workspace = true }
pezsp-state-machine = { workspace = true, default-features = true }

[features]
runtime-benchmarks = [
	"bizinikiwi-test-runtime-client/runtime-benchmarks",
	"pezsp-api/runtime-benchmarks",
	"pezsp-block-builder/runtime-benchmarks",
	"pezsp-blockchain/runtime-benchmarks",
	"pezsp-inherents/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
	"pezsp-state-machine/runtime-benchmarks",
	"pezsp-trie/runtime-benchmarks",
]
std = ["bizinikiwi-test-runtime-client/std", "pezsp-blockchain/std"]
try-runtime = [
	"bizinikiwi-test-runtime-client/try-runtime",
	"pezsp-api/try-runtime",
	"pezsp-block-builder/try-runtime",
	"pezsp-blockchain/try-runtime",
	"pezsp-inherents/try-runtime",
	"pezsp-runtime/try-runtime",
]
serde = []
